--- a/steps/app/templates/app/comparator.html
+++ b/steps/app/templates/app/comparator.html
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-	{% load static %}
-	<title>S.T.E.P.S</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'app/css/comparator.css' %}">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-	rel="stylesheet">
-	<link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
-	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
-	<link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
-	<script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
+{% extends 'app/base.html' %}
+{% block content %}
+{% load static%}
 
-</head>
 <body>
 
   <header class="header navbar-fixed-top">
@@ -94,6 +82,5 @@
 </div>
 </div>
 
-
-</body>
-</html>
+ </body>
+{% endblock content %}
