--- a/steps/app/templates/app/dashboard.html
+++ b/steps/app/templates/app/dashboard.html
@@ -11,6 +11,7 @@
 	<link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
 	<link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
 	<script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
+  <link href="{% static 'app/css/bot.css' %}" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
@@ -116,11 +117,32 @@
   		</div>
   	</div>
   </div>
+
+  <div class="giffy-container">
+      <img src="https://media.giphy.com/media/adCM22G9lWT9m/source.gif">
+    </div>
+    <div class="bot-container">
+      <div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close btn-close"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
+    </div>    
+
 </body>
 <script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'app/js/bootstrap.min.js' %}" type="text/javascript"></script>
 <script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script>
 
+<script>
+  $(document).ready(function(){
+    $('.giffy-container').click(function(){
+      $('.bot-container').show();
+      $('.giffy-container').hide();
+    });
+
+    $('.btn-close').click(function(){
+      $('.bot-container').hide();
+      $('.giffy-container').show();
+    });
+  });
+</script>
 
 </html>
