--- a/steps/app/templates/app/index.html
+++ b/steps/app/templates/app/index.html
@@ -1,30 +1,9 @@
-<!DOCTYPE html>
-
-<html lang="en" class="no-js">
-
-<head>
-  {% load static %}
-  <meta charset="utf-8"/>
-  <title>Steps</title>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <meta content="steps" name="description"/>
-  <link href="http://fonts.googleapis.com/css?family=Hind:300,400,500,600,700" rel="stylesheet" type="text/css">
-  <link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
-  <link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
-  <link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
-  <link href="{% static 'app/css/bot.css' %}" rel="stylesheet" type="text/css"/>
-  <script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
-
-  <link rel="shortcut icon" href="favicon.ico"/>
-  <link rel="stylesheet" href="{% static 'app/css/footer-distributed-with-address-and-phones.css' %}">
-</head>
-
+{% extends 'app/base.html' %}
+{% block content %}
+{% load static%}
 
 <body id="body" data-spy="scroll" data-target=".header">
-  
+
 
   <header class="header navbar-fixed-top">
     <nav class="navbar" role="navigation">
@@ -337,12 +316,12 @@
 
     </div>
 
-<div class="giffy-container">
-  <img src="https://media.giphy.com/media/adCM22G9lWT9m/source.gif">
-</div>
-<div class="bot-container">
-<div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close btn-close"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
-</div>    
+    <div class="giffy-container">
+      <img src="https://media.giphy.com/media/adCM22G9lWT9m/source.gif">
+    </div>
+    <div class="bot-container">
+      <div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close btn-close"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
+    </div>    
 
     <div class="footer-right">
 
@@ -368,131 +347,97 @@
   <!-- Back To Top -->
   <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
 
-  <!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
-  <!-- chart.js scripts -->
-  <script type="text/javascript">
-    new Chart(document.getElementById("myChart1"), {
-      type: 'doughnut',
-      data: {
-        labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
-        datasets: [
-          {
-            label: "Population (millions)",
-            backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-            data: [2478,5267,734,784,433]
-          }
-        ]
-      },
-      options: {
-        responsive: true,
-        legend: {
-          position: 'top',
-        },
-        title: {
-          display: true,
-          text: 'Chart.js Doughnut Chart'
-        },
-        animation: {
-          animateScale: true,
-          animateRotate: true
-        }
-      }
-    });
-
-    new Chart(document.getElementById("myChart2"), {
-      type: 'doughnut',
-      data: {
-        labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
-        datasets: [
-          {
-            label: "Population (millions)",
-            backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-            data: [2478,5267,734,784,433]
-          }
-        ]
-      },
-      options: {
-        responsive: true,
-        legend: {
-          position: 'top',
-        },
-        title: {
-          display: true,
-          text: 'Chart.js Doughnut Chart'
-        },
-        animation: {
-          animateScale: true,
-          animateRotate: true
-        }
-      }
-    });
-
-    new Chart(document.getElementById("myChart3"), {
-      type: 'doughnut',
-      data: {
-        labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
-        datasets: [
-          {
-            label: "Population (millions)",
-            backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
-            data: [2478,5267,734,784,433]
-          }
-        ]
-      },
-      options: {
-        responsive: true,
-        legend: {
-          position: 'top',
-        },
-        title: {
-          display: true,
-          text: 'Chart.js Doughnut Chart'
-        },
-        animation: {
-          animateScale: true,
-          animateRotate: true
-        }
-      }
-    });
-  </script>
-
-
-  <!-- CORE PLUGINS -->
-  <script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/bootstrap.min.js' %}" type="text/javascript"></script>
-
-  <!-- PAGE LEVEL PLUGINS -->
-  <script src="{% static 'app/js/jquery.easing.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/jquery.back-to-top.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/jquery.smooth-scroll.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/jquery.wow.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/swiper.jquery.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/jquery.masonry.pkgd.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/imagesloaded.pkgd.min.js' %}" type="text/javascript"></script>
-
-  <!-- PAGE LEVEL SCRIPTS -->
-  <script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script> 
-  <script src="{% static 'app/js/bot.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/wow.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/swiper.min.js' %}" type="text/javascript"></script>
-  <script src="{% static 'app/js/masonry.min.js' %}" type="text/javascript"></script>
-
-
 </body>
 
-  <script>
-    $(document).ready(function(){
-      $('.giffy-container').click(function(){
-        $('.bot-container').show();
-        $('.giffy-container').hide();
-      });
+{% endblock content %}
+{% block script%}
 
-      $('.btn-close').click(function(){
-        $('.bot-container').hide();
-        $('.giffy-container').show();
-      });
-    });
-  </script>
-<!-- END BODY -->
-</html>
+<!-- JAVASCRIPTS(Load javascripts at bottom, this will reduce page load time) -->
+<!-- chart.js scripts -->
+<script type="text/javascript">
+  new Chart(document.getElementById("myChart1"), {
+    type: 'doughnut',
+    data: {
+      labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+      datasets: [
+      {
+        label: "Population (millions)",
+        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+        data: [2478,5267,734,784,433]
+      }
+      ]
+    },
+    options: {
+      responsive: true,
+      legend: {
+        position: 'top',
+      },
+      title: {
+        display: true,
+        text: 'Chart.js Doughnut Chart'
+      },
+      animation: {
+        animateScale: true,
+        animateRotate: true
+      }
+    }
+  });
+
+  new Chart(document.getElementById("myChart2"), {
+    type: 'doughnut',
+    data: {
+      labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+      datasets: [
+      {
+        label: "Population (millions)",
+        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+        data: [2478,5267,734,784,433]
+      }
+      ]
+    },
+    options: {
+      responsive: true,
+      legend: {
+        position: 'top',
+      },
+      title: {
+        display: true,
+        text: 'Chart.js Doughnut Chart'
+      },
+      animation: {
+        animateScale: true,
+        animateRotate: true
+      }
+    }
+  });
+
+  new Chart(document.getElementById("myChart3"), {
+    type: 'doughnut',
+    data: {
+      labels: ["Africa", "Asia", "Europe", "Latin America", "North America"],
+      datasets: [
+      {
+        label: "Population (millions)",
+        backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+        data: [2478,5267,734,784,433]
+      }
+      ]
+    },
+    options: {
+      responsive: true,
+      legend: {
+        position: 'top',
+      },
+      title: {
+        display: true,
+        text: 'Chart.js Doughnut Chart'
+      },
+      animation: {
+        animateScale: true,
+        animateRotate: true
+      }
+    }
+  });
+</script>
+
+{% endblock %}
