--- a/steps/app/templates/app/base.html
+++ b/steps/app/templates/app/base.html
@@ -28,7 +28,12 @@
 </head>
 
 {% block content %}{% endblock %}   
-
+ <div class="giffy-container">
+      <img src="{% static 'app/img/giphy.gif' %}">
+    </div>
+    <div class="bot-container">
+      <div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close btn-close"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
+    </div>
   <!-- CORE PLUGINS -->
   <script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
@@ -50,6 +55,19 @@
   <script src="{% static 'app/js/swiper.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'app/js/masonry.min.js' %}" type="text/javascript"></script>
 
+  <script>
+    $(document).ready(function(){
+      $('.giffy-container').click(function(){
+        $('.bot-container').show();
+        $('.giffy-container').hide();
+      });
+
+      $('.btn-close').click(function(){
+        $('.bot-container').hide();
+        $('.giffy-container').show();
+      });
+    });
+  </script>
    {% block script %}{% endblock %}
 
 </html>
