--- a/steps/app/templates/app/dashboard.html
+++ b/steps/app/templates/app/dashboard.html
@@ -119,7 +119,7 @@
   </div>
 
   <div class="giffy-container">
-      <img src="https://media.giphy.com/media/adCM22G9lWT9m/source.gif">
+      <img src="{% static 'app/img/giphy.gif' %}">
     </div>
     <div class="bot-container">
       <div class="chat_window"><div class="top_menu"><div class="buttons"><div class="button close btn-close"></div></div><div class="title">Chat</div></div><ul class="messages"></ul><div class="bottom_wrapper clearfix"><div class="message_input_wrapper"><input class="message_input" placeholder="Type your message here..." /></div><div class="send_message"><div class="icon"></div><div class="text">Send</div></div></div></div><div class="message_template"><li class="message"><div class="avatar"></div><div class="text_wrapper"><div class="text"></div></div></li></div>
