--- a/steps/app/templates/app/incubator_profile.html
+++ b/steps/app/templates/app/incubator_profile.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	{% load static %}
-	<title>S.T.E.P.S</title>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="{% static 'app/css/main.css' %}">
-	<link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
-	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'app/css/animate.min.css' %}" rel="stylesheet">
-	<link href="{% static 'app/css/swiper.min.css' %}" rel="stylesheet" type="text/css"/>
-	<link href="{% static 'app/css/layout.css' %}" rel="stylesheet" type="text/css"/>
-	<script src="{% static 'app/js/chart.min.js' %}" type="text/javascript"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByvunbP4yxz3UymqyLoZNLQH1FNXZCtY0&callback=initMap"
-	async defer></script>
-</head>
+{% extends 'app/base.html' %}
+{% block content %}
+{% load static%}
 
 <body>
 	<header class="header navbar-fixed-top">
@@ -64,6 +50,13 @@
 	<div class="cover-image col-sm-12">
 	</div>
 	<div class="profile-image col-sm-offset-1">
+	</div>
+	<div class="activitybar col-sm-12 ">
+		<ul class="list-inline activitybar-links col-sm-offset-3">
+			<li><a href="#">Incubated Startups</a></li>
+			<li><a href="#">Fundings</a></li>
+			<li><a href="#">Activities</a></li>
+		</ul>
 	</div>
 </div>
 <div class="profile-info col-sm-12">
@@ -121,9 +114,4 @@
 
 </div>
 </body>
-<script src="{% static 'app/js/jquery.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'app/js/jquery-migrate.min.js' %}" type="text/javascript"></script>
-<script src="{% static 'app/js/bootstrap.min.js' %}" type="text/javascript"></script>
-<!-- PAGE LEVEL SCRIPTS -->
-<script src="{% static 'app/js/layout.js' %}" type="text/javascript"></script>
-</html>
+{% endblock content %}
