--- a/steps/app/templates/app/profile_update.html
+++ b/steps/app/templates/app/profile_update.html
@@ -12,21 +12,6 @@
 
 </head>
 <body>
-	<!--
-	<div class="file-form">
-		<h2>File update form</h2>
-		<div class="form-group">
-    		<label for="Title">Title</label>
-    		<input type="text" class="form-control" id="Title">
-  		</div>
-
-		<div class="form-group">
-    		<label for="file">File</label>
-    		<input type="file" class="form-control" id="Title">
-  		</div>
-  		<button class="btn btn-info file-info">Submit</button>
-  	</div>	
-	-->
 <div class="form-container" style="display: flex; flex-direction: column; margin-top: 50px;">
  
  <div class="form-style-8 col-sm-6">	
@@ -62,6 +47,10 @@
     		</select>
   		</div>
 
+      <div class="form-group">
+        <label for="option">Contact no.</label>
+        <input type="text" class="form-control" id="contact-value">
+    </div>
 
 		<div class="form-group">
 			<label for="visible">Visibility</label>
@@ -131,8 +120,9 @@
 	$(document).ready(function(){
 		$('.contact-btn').click(function(){
 			var text1 = $("#type_contact").val();
-			var text2 = $('#visible_info').val();
-			var args = {'val_contact': text1, 'visiblity':text2};
+      var text2 = $("#contact-value")
+			var text3 = $('#visible_info').val();
+			var args = {'contact-type': text1, 'contact-value':text2 'visiblity':text2};
 			$.get("/", args).done(function(data){
 				console.log(data);
 			});
@@ -150,7 +140,7 @@
 		$('.social-btn').click(function(){
 			var text1 = $('#social-site').val();
 			var text2 = $('#social-visibility').val();
-			var args = {'social_val': text1, 'social_visibility ':text2};
+			var args = {'social-type': text1, 'social_visibility ':text2};
 			$.get("/", args).done(function(data){
 				console.log(data);
 			});
