--- a/steps/app/templates/app/profile_update.html
+++ b/steps/app/templates/app/profile_update.html
@@ -1,18 +1,56 @@
-<!DOCTYPE html>
-<html>
-<head>
-	{% load static %}
-	<title>S.T.E.P.S.</title>
- 	<link rel="stylesheet" type="text/css" href="{% static 'app/css/leaderboard.css' %}">
- 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
- 	rel="stylesheet">
- 	<link href="{% static 'app/css/font-awesome.min.css' %}" rel="stylesheet">
- 	<link href="{% static 'app/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css"/>
- 	<link href="{% static 'app/css/update_profile.css' %}" rel="stylesheet" type="text/css"/>
+{% extends 'app/base.html' %}
+{% block content %}
+{% load static%}
+<link href="{% static 'app/css/update_profile.css' %}" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" type="text/css" href="{% static 'app/css/leaderboard.css' %}">
 
 </head>
 <body>
-<div class="form-container" style="display: flex; flex-direction: column; margin-top: 50px;">
+	<header class="header navbar-fixed-top">
+		<nav class="navbar" role="navigation">
+			<div class="container">
+				<div class="menu-container js_nav-item">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="toggle-icon"></span>
+					</button>
+
+					<div class="logo">
+						<a class="logo-wrap" href="#body">
+							<img class="logo-img logo-img-main" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Logo">
+							<img class="logo-img logo-img-active" src="{% static 'app/img/logofinal.png' %}" alt="FlameOnePage Dark Logo">
+						</a>
+					</div>
+				</div>
+				<br>
+
+				<div class="collapse navbar-collapse nav-collapse">
+
+          <!--div class="language-switcher">
+            <ul class="nav-lang">
+                        <li><a class="active" href="#">EN</a></li>
+              <li><a href="#">DE</a></li>
+            <li><a href="#">FR</a></li>
+            </ul>
+        </div--> 
+
+        <div class="menu-container">
+        	<ul class="nav navbar-nav navbar-nav-right">
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Home</a></li>
+        		{% if not request.user.is_authenticated %}
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Compare</a></li>
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Leader Board</a></li>
+        		{% endif %}
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Add Event</a></li>
+        		<li class="js_nav-item nav-item"><a class="nav-item-child nav-item-hover" href="">Logout</a></li>
+        	</ul>
+        </div>
+    </div>
+</div>
+</nav>
+</header>
+
+<div class="form-container" style="display: flex; flex-direction: column; margin-top: 80px;">
  
  <div class="form-style-8 col-sm-6">	
 <form method="post" action="" enctype="multipart/form-data" class="ui form">
@@ -37,6 +75,9 @@
 </div>
 
   <div class="form-style-8 col-sm-6">
+
+<div class="form-container" style="display: flex; flex-direction: column; margin-top: 50px;">
+	<div class="form-style-8 col-sm-6">
   		<h2>Contact Info Form</h2>
   		<form>
     	<div class="form-group">
@@ -115,6 +156,8 @@
 	</div>	
 </div>	
 </body>
+{% endblock content %}
+{% block script%}
 
 <script>
 	$(document).ready(function(){
@@ -149,3 +192,5 @@
 	})
 </script>
 </html>
+
+{% endblock %}
