--- a/steps/app/static/app/css/update_profile.css
+++ b/steps/app/static/app/css/update_profile.css
@@ -70,3 +70,7 @@
     background:linear-gradient(to bottom, #34CACA 5%, #30C9C9 100%);
     background-color:#34CACA;
 }
+
+.update-cards{
+    width: 400px;
+}
