--- a/steps/app/templates/app/profile_update.html
+++ b/steps/app/templates/app/profile_update.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'app/css/leaderboard.css' %}">
 
 </head>
-<body>
+<body style="background-color: #A9A9A9">
 	<header class="header navbar-fixed-top">
 		<nav class="navbar" role="navigation">
 			<div class="container">
@@ -77,7 +77,7 @@
   <div class="form-style-8 col-sm-6">
 
 <div class="form-container" style="display: flex; flex-direction: column; margin-top: 50px;">
-	<div class="form-style-8 col-sm-6">
+	<div class="form-style-8 col-sm-6 update-cards">
   		<h2>Contact Info Form</h2>
   		<form>
     	<div class="form-group">
@@ -109,7 +109,7 @@
     	</form>
 	</div>
 
-	<div class="form-style-8 col-sm-6">
+	<div class="form-style-8 col-sm-6 update-cards">
 		<form>
 			<h2>Achievements form</h2>
 		<div class="form-group">
@@ -125,7 +125,7 @@
 		</form>
 	</div>	
 
-	<div class="form-style-8 col-sm-6">
+	<div class="form-style-8 col-sm-6 update-cards">
 		<form>
 			<h2>Social Info form</h2>
 		<div class="form-group">
@@ -194,3 +194,4 @@
 </html>
 
 {% endblock %}
+O
